bindings/c/include/cgenalyzer.h


typedef enum GnCodeFormat {
	GnCodeFormatOffsetBinary, 
	GnCodeFormatTwosComplement 
} GnCodeFormat;
__api int gn_quantize32(int32_t *out, 
		size_t out_size, 
		const double *in, 
		size_t in_size, 
		double fsr, 
		int n, 
		double noise, 
		GnCodeFormat format 
);
__api int gn_quantize64(int64_t *out, 
		size_t out_size, 
		const double *in, 
		size_t in_size, 
		double fsr, 
		int n, 
		double noise, 
		GnCodeFormat format 
);
__api int gn_cos(double *out, 
		size_t size, 
		double fs, 
		double ampl, 
		double freq, 
		double phase, 
		double td, 
		double tj 
);
__api int gn_gaussian(double *out, 
		size_t size, 
		double mean, 
		double sd 
);
__api int gn_ramp(double *out, 
		size_t size, 
		double start, 
		double stop, 
		double noise 
);
__api int gn_sin(double *out, 
		size_t size, 
		double fs, 
		double ampl, 
		double freq, 
		double phase, 
		double td, 
		double tjrms 
);
__api int gn_wf_analysis(char **rkeys, 
		size_t rkeys_size, 
		double *rvalues, 
		size_t rvalues_size, 
		const double *in, 
		size_t in_size 
);
__api int
gn_wf_analysis16(char **rkeys, 
		size_t rkeys_size, 
		double *rvalues, 
		size_t rvalues_size, 
		const int16_t *in, 
		size_t in_size 
);
__api int
gn_wf_analysis32(char **rkeys, 
		size_t rkeys_size, 
		double *rvalues, 
		size_t rvalues_size, 
		const int32_t *in, 
		size_t in_size 
);
__api int
gn_wf_analysis64(char **rkeys, 
		size_t rkeys_size, 
		double *rvalues, 
		size_t rvalues_size, 
		const int64_t *in, 
		size_t in_size 
);