out/install/x64-Debug/cgenalyzer_simplified_beta.h


typedef struct gn_config_private *gn_config;
typedef enum tone_type { REAL_COSINE,
	REAL_SINE,
	COMPLEX_EXP } tone_type;
__api int gn_config_free(gn_config *c);
__api int gn_config_set_ttype(tone_type ttype, gn_config *c);
__api int gn_config_set_npts(size_t npts, gn_config *c);
__api int gn_config_get_npts(size_t *npts, gn_config *c);
__api int gn_config_set_sample_rate(double sample_rate, gn_config *c);
__api int gn_config_get_sample_rate(double *sample_rate, gn_config *c);
__api int gn_config_set_data_rate(double data_rate, gn_config *c);
__api int gn_config_set_shift_freq(double shift_freq, gn_config *c);
__api int gn_config_set_num_tones(size_t num_tones, gn_config *c);
__api int gn_config_set_tone_freq(double *tone_freq, gn_config *c);
__api int gn_config_set_tone_ampl(double *tone_ampl, gn_config *c);
__api int gn_config_set_tone_phase(double *tone_phase, gn_config *c);
__api int gn_config_set_fsr(double fsr, gn_config *c);
__api int gn_config_set_qres(int qres, gn_config *c);
__api int gn_config_set_noise_rms(double noise_rms, gn_config *c);
__api int gn_config_set_code_format(GnCodeFormat code_format, gn_config *c);
__api int gn_config_set_nfft(size_t nfft, gn_config *c);
__api int gn_config_get_nfft(size_t *nfft, gn_config *c);
__api int gn_config_set_fft_navg(size_t fft_navg, gn_config *c);
__api int gn_config_set_win(GnWindow win, gn_config *c);
__api int gn_config_set_ssb_fund(int ssb_fund, gn_config *c);
__api int gn_config_set_ssb_rest(int ssb_rest, gn_config *c);
__api int gn_config_set_max_harm_order(int max_harm_order, gn_config *c);
__api int gn_config_set_dnla_signal_type(GnDnlSignal dnla_signal_type,
		gn_config *c);
__api int gn_config_set_inla_fit(GnInlLineFit inla_fit, gn_config *c);
__api int gn_config_set_ramp_start(double ramp_start, gn_config *c);
__api int gn_config_set_ramp_stop(double ramp_stop, gn_config *c);
__api int gn_config_get_code_density_size(size_t *code_density_size,
		gn_config *c);
__api int gn_config_gen_tone(tone_type ttype, size_t npts, double sample_rate,
		size_t num_tones, double *tone_freq,
		double *tone_ampl, double *tone_phase,
		gn_config *c);
__api int gn_config_gen_ramp(size_t npts, double ramp_start, double ramp_stop,
		gn_config *c);
__api int gn_config_quantize(size_t npts, double fsr, int qres, double qnoise,
		gn_config *c);
__api int gn_config_histz_nla(size_t npts, int qres, gn_config *c);
__api int gn_config_fftz(
		size_t npts, 
		int qres, 
		size_t navg, 
		size_t nfft, 
		GnWindow win, 
		gn_config *c 
);
__api int gn_config_fa(
		double fixed_tone_freq, 
		gn_config *c 
);
__api int gn_config_fa_auto(
		uint8_t ssb_width, 
		gn_config *c 
);
__api int gn_gen_ramp(double **out, gn_config *c);
__api int gn_gen_real_tone(double **out, gn_config *c);
__api int gn_gen_complex_tone(double **outi, double **outq, gn_config *c);
__api int gn_quantize(
		int32_t **out, 
		const double *in, 
		gn_config *c 
);
__api int
gn_fftz(double **out, 
		const int32_t *in_i, 
		const int32_t *in_q, 
		gn_config *c 
);
__api int gn_histz(
		uint64_t **
				hist, 
		size_t *hist_len, 
		const int32_t *qwf, 
		gn_config *
				c 
);
__api int gn_dnlz(double **dnl, size_t *dnl_len, const uint64_t *hist,
		gn_config *c);
__api int gn_inlz(double **inl, size_t *inl_len, const double *dnl,
		gn_config *c);
__api int gn_get_wfa_results(
		char ***rkeys, double **rvalues,
		size_t *results_size, 
		const int32_t *qwf, 
		gn_config *
				c 
);
__api int gn_get_ha_results(
		char ***rkeys, 
		double **rvalues, 
		size_t *results_size, 
		const uint64_t *hist, 
		gn_config *
				c 
);