bindings/csharp/Genalyzer/NativeMethods.cs


        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_quantize32(
            [Out] int[]    output, UIntPtr outSize,
            [In]  double[] input,  UIntPtr inSize,
            double fsr, int n, double noise, int format);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_quantize64(
            [Out] long[]   output, UIntPtr outSize,
            [In]  double[] input,  UIntPtr inSize,
            double fsr, int n, double noise, int format);

        // ===============================================================
        // Waveforms
        // ===============================================================

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_cos(
            [Out] double[] output, UIntPtr size,
            double fs, double ampl, double freq,
            double phase, double td, double tj);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_gaussian(
            [Out] double[] output, UIntPtr size,
            double mean, double sd);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_ramp(
            [Out] double[] output, UIntPtr size,
            double start, double stop, double noise);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_sin(
            [Out] double[] output, UIntPtr size,
            double fs, double ampl, double freq,
            double phase, double td, double tjrms);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_wf_analysis(
            [In, Out] IntPtr[] rkeys,   UIntPtr rkeysSize,
            [Out]     double[] rvalues, UIntPtr rvaluesSize,
            [In]      double[] input,   UIntPtr inSize);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_wf_analysis16(
            [In, Out] IntPtr[] rkeys,   UIntPtr rkeysSize,
            [Out]     double[] rvalues, UIntPtr rvaluesSize,
            [In]      short[]  input,   UIntPtr inSize);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_wf_analysis32(
            [In, Out] IntPtr[] rkeys,   UIntPtr rkeysSize,
            [Out]     double[] rvalues, UIntPtr rvaluesSize,
            [In]      int[]    input,   UIntPtr inSize);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_wf_analysis64(
            [In, Out] IntPtr[] rkeys,   UIntPtr rkeysSize,
            [Out]     double[] rvalues, UIntPtr rvaluesSize,
            [In]      long[]   input,   UIntPtr inSize);

        // ===============================================================
        // Simplified Beta API  (cgenalyzer_simplified_beta.h)
        // ===============================================================

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_free(ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_ttype(int ttype, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_npts(UIntPtr npts, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_get_npts(out UIntPtr npts, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_sample_rate(double sampleRate, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_get_sample_rate(out double sampleRate, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_data_rate(double dataRate, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_shift_freq(double shiftFreq, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_num_tones(UIntPtr numTones, ref IntPtr c);

        // The tone arrays are passed as IntPtr (not double[]) because the
        // native side STORES the pointer in the config struct and dereferences
        // it later (in gn_gen_real_tone / gn_gen_complex_tone).  Default
        // double[] marshaling only pins the array for the duration of this
        // single call, leaving a dangling pointer afterwards.  The managed
        // wrapper pins the arrays in long-lived GCHandles and passes their
        // stable addresses here.
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_tone_freq(
            IntPtr toneFreq, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_tone_ampl(
            IntPtr toneAmpl, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_tone_phase(
            IntPtr tonePhase, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_fsr(double fsr, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_qres(int qres, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_noise_rms(double noiseRms, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_code_format(int codeFormat, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_nfft(UIntPtr nfft, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_get_nfft(out UIntPtr nfft, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_fft_navg(UIntPtr fftNavg, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_win(int win, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_ssb_fund(int ssbFund, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_ssb_rest(int ssbRest, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_max_harm_order(int maxHarmOrder, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_dnla_signal_type(int dnlaSignalType, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_inla_fit(int inlaFit, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_ramp_start(double rampStart, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_set_ramp_stop(double rampStop, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_get_code_density_size(
            out UIntPtr codeDensitySize, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_gen_tone(
            int ttype, UIntPtr npts, double sampleRate,
            UIntPtr numTones,
            IntPtr toneFreq,
            IntPtr toneAmpl,
            IntPtr tonePhase,
            ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_gen_ramp(
            UIntPtr npts, double rampStart, double rampStop, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_quantize(
            UIntPtr npts, double fsr, int qres, double qnoise, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_histz_nla(
            UIntPtr npts, int qres, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_fftz(
            UIntPtr npts, int qres, UIntPtr navg, UIntPtr nfft,
            int win, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_fa(
            double fixedToneFreq, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_config_fa_auto(
            byte ssbWidth, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_gen_ramp(
            out IntPtr output, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_gen_real_tone(
            out IntPtr output, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_gen_complex_tone(
            out IntPtr outI, out IntPtr outQ, ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_quantize(
            out IntPtr output,
            [In] double[] input,
            ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fftz(
            out IntPtr output,
            [In] int[] inI,
            [In] int[] inQ,
            ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_histz(
            out IntPtr hist, out UIntPtr histLen,
            [In] int[] qwf,
            ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_dnlz(
            out IntPtr dnl, out UIntPtr dnlLen,
            [In] ulong[] hist,
            ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_inlz(
            out IntPtr inl, out UIntPtr inlLen,
            [In] double[] dnl,
            ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_get_wfa_results(
            out IntPtr rkeys, out IntPtr rvalues,
            out UIntPtr resultsSize,
            [In] int[] qwf,
            ref IntPtr c);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_get_ha_results(
            out IntPtr rkeys, out IntPtr rvalues,
            out UIntPtr resultsSize,
            [In] ulong[] hist,
            ref IntPtr c);
